[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://Theme.tres" type="Theme" id=3]
[ext_resource path="res://transition.shader" type="Shader" id=4]
[ext_resource path="res://UI/Popup.tscn" type="PackedScene" id=5]
[ext_resource path="res://ICONS/gear.png" type="Texture" id=6]
[ext_resource path="res://ICONS/home.png" type="Texture" id=7]
[ext_resource path="res://Fonts/EarthquakeMF.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/target = Vector2( 0.5, 0.5 )
shader_param/intensity = 0.645
shader_param/color = null

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.645 ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.645, 0.0 ]
}

[sub_resource type="DynamicFont" id=5]
size = 88
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
modulate = Color( 0.791504, 0.194784, 0.194784, 1 )
anchor_left = 0.372
anchor_right = 0.643
anchor_bottom = 0.211
margin_left = -18.928
margin_right = 3.56799
margin_bottom = -20.6
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerLabel" type="Label" parent="HBoxContainer"]
margin_top = 9.0
margin_right = 207.0
margin_bottom = 96.0
text = "Power: 3"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 257.0
margin_bottom = 95.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Destroyed" type="Label" parent="VBoxContainer"]
margin_right = 237.0
margin_bottom = 30.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.854902, 0.141176, 0.141176, 1 )
text = "Buildings Destroyed: 0"

[node name="Destroyed2" type="Label" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 237.0
margin_bottom = 64.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.854902, 0.141176, 0.141176, 1 )
text = "Most Destroyed: 0"

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )

[node name="Popup" parent="." instance=ExtResource( 5 )]

[node name="TextureButton" type="TextureButton" parent="."]
modulate = Color( 0.0196078, 0, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_bottom = 100.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeButton" type="TextureButton" parent="HBoxContainer2"]
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 7 )

[node name="YouWin" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.898039, 0.639216, 0.152941, 1 )
text = "TOTAL
DESTRUCTION"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="HBoxContainer2/HomeButton" to="." method="_on_HomeButton_pressed"]
